--- a/demo.component.html
+++ b/demo.component.html
@@ -1,9 +1,9 @@
-<h1>Demonstration of class binding</h1>
+<h1>Demonstaration of Style binding</h1>
 
-<h1 [class] = "'success'">
-    Marvellous Infosystems
-</h1>
+<h1>Marvellous Infosystems</h1>
 
-<h1 [class] = "'failure'">
-    Angular Web Development
-</h1>
+<h1 [style.color] = "'red'">Marvellous Infosystems</h1>
+
+<h1 [style.color] = "Mycolor">Marvellous Infosystems</h1>
+
+<h1 [style.color] = "Veg ? 'green' : 'red' ">Marvellous Infosystems</h1>
