--- a/demo.component.html
+++ b/demo.component.html
@@ -1,5 +1,2 @@
-<h2>Enter your name : </h2>
-
-<!--By using ngModel directive we can achive two way binding-->
-<input [(ngModel)]="UserName" type="text">
-{{UserName}}
+<input #InputData type="text">
+<button (click)="AcceptData(InputData.value)">Submit data</button>
